selftests/xsk: xsk selftests - DRV POLL, NOPOLL
Adds following tests:

3. AF_XDP DRV/Native mode
   Works on any netdevice with XDP support, driver dependent. Processes
   packets before SKB allocation. Provides better performance than SKB.
   Driver hook available just after DMA of buffer descriptor.
   a. nopoll
   b. poll

Only copy-mode is supported.

Total tests: 5.

Signed-off-by: Weqaar Janjua <weqaar.a.janjua@intel.com>

--- a/tools/testing/selftests/xsk/README
+++ b/tools/testing/selftests/xsk/README
@@ -67,9 +67,16 @@ The following tests are run:
 	  https://lore.kernel.org/bpf/
 	  1556786363-28743-1-git-send-email-magnus.karlsson@intel.com/
 
+3. AF_XDP DRV/Native mode
+   Works on any netdevice with XDP support, driver dependent. Processes
+   packets before SKB allocation. Provides better performance than SKB.
+   Driver hook available just after DMA of buffer descriptor.
+   a. nopoll
+   b. poll
+
 For all tests, currently only copy-mode is supported.
 
-Total tests: 3.
+Total tests: 5.
 
 Flow:
 * Single process spawns two threads: Tx and Rx
