--- a/tools/testing/selftests/xsk/README
+++ b/tools/testing/selftests/xsk/README
@@ -66,6 +66,9 @@ The following tests are run:
       For explanation on poll and no-poll refer to this RFC:
 	  https://lore.kernel.org/bpf/
 	  1556786363-28743-1-git-send-email-magnus.karlsson@intel.com/
+   c. Socket Teardown - nopoll mode
+      Create a Tx and a Rx socket, Tx from one socket, Rx on another. Destroy
+      both sockets, then repeat multiple times.
 
 3. AF_XDP DRV/Native mode
    Works on any netdevice with XDP support, driver dependent. Processes
@@ -73,10 +76,11 @@ The following tests are run:
    Driver hook available just after DMA of buffer descriptor.
    a. nopoll
    b. poll
+   c. Socket Teardown - nopoll mode
 
 For all tests, currently only copy-mode is supported.
 
-Total tests: 5.
+Total tests: 7.
 
 Flow:
 * Single process spawns two threads: Tx and Rx
